# Movie-Reservation-System

MovieReservationSystem/: CMakeLists.txt  Main.qml  README.md  assets.qrc  main.cpp
MovieReservationSystem/qml/app/: AppContent.qml  AppFooter.qml  AppHeader.qml
MovieReservationSystem/qml/view/: MovieSelector.qml  SeatSelector.qml  SummaryPopup.qml  TheaterSelector.qml
MovieReservationSystem/src/: controller.cpp  controller.h  datareader.h  moviedata.cpp  moviedata.h  moviemodel.cpp  moviemodel.h  seatdata.cpp  seatdata.h  theaterdata.cpp  theaterdata.h  theatermodel.cpp  theatermodel.h
